initial landing page structure

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,77 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - Rent Rufus </title>
+</head>
+<body>
+
+<!-- add the navbar across the top -->
+
+<div class="navbar">
+  <div class="container">
+    <img src="#" alt="Rufus logo" width="50px">
+    <a href="#" class="btn btn-primary">Sign Up</a>
+    <a href="#" class="btn btn-primary">Login</a>
+  </div>
+</div>
+
+
+<!-- banner with descriptive text, photo, search form inputs and button -->
+<div class="banner">
+  <img src="/app/assets/images/doggo_banner1.jpg" alt="Dog Playing in Park">
+  <div class="container">
+    <h1>Rent Rufus</h1>
+    <h3>Adopt man's best friend...for a few hours!</h3>
+    <h3>Choose when and what you want to do with your new buddy</p>
+    <p>Lisbon's premium service for <em>peer-to-peer dog sharing</em></p>
+  </div>
+</div>
+
+<div>
+<!-- add the search bar -->
+  <simple_form_for>
+  </simple_form_for>
+
+<!-- add the primary Search button -->
+  <a href="#" class="btn btn-primary">Find a Doggo!</a>
+</div>
+
+
+<div>
+<!-- add the cards x 3 across the middle bottom -->
+
+</div>
+
+
+<!-- footer across the bottom -->
+<div class="footer">
+  <ul class="social-links">
+    <li>
+      <a href="" target="_blank" class="social-icon">
+      <i class="fa-brands fa-twitter-square"></i>
+      </a>
+    </li>
+    <li>
+      <a href="" target="_blank" class="social-icon">
+      <i class="fa-brands fa-facebook-f"></i>
+      </a>
+    </li>
+    <li>
+       <a href="" target="_blank" class="social-icon">
+       <i class="fa-brands fa-instagram"></i>
+       </a>
+    </li>
+  </ul>
+
+  <ul class = "company-details">
+    <li><a href="">Team</a></li>
+    <li><a href="">About Us</a></li>
+    <li><a href="">Privacy</a></li>
+    <li><a href="">Legal</a></li>
+  </ul>
+</div>
+
+</body>
+</html>
