--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,72 +6,89 @@
   <title>Home - Rent Rufus </title>
 </head>
 <body>
-
-<!-- add the navbar across the top -->
-
-<div class="navbar">
-  <div class="container">
-    <img src="#" alt="Rufus logo" width="50px">
-    <a href="#" class="btn btn-primary">Sign Up</a>
-    <a href="#" class="btn btn-primary">Login</a>
+  <!-- add the navbar across the top -->
+  <div class="navbar">
+    <div class="container">
+      <img src="/assets/rufus_logo.png" alt="Rufus logo" width="150px">
+      <a href="#" class="btn btn-primary">Sign Up</a>
+      <a href="#" class="btn btn-primary">Login</a>
+    </div>
   </div>
-</div>
 
+  <!-- banner with descriptive text, photo, search form inputs and button -->
+  <div class="banner" style="background-image: url(assets/doggo_banner3.jpg);">
+    <div class="container justify-text-center">
+      <h1>Rent Rufus</h1>
+      <h3>Adopt man's best friend...for a few hours!</h3>
+      <h3>Choose <strong>when</strong> and <strong>what</strong> you want to do with your new buddy</p>
+      <p>Lisbon's premium service for <em>peer-to-peer dog sharing</em></p>
+    </div>
 
-<!-- banner with descriptive text, photo, search form inputs and button -->
-<div class="banner">
-  <img src="/app/assets/images/doggo_banner1.jpg" alt="Dog Playing in Park">
-  <div class="container">
-    <h1>Rent Rufus</h1>
-    <h3>Adopt man's best friend...for a few hours!</h3>
-    <h3>Choose when and what you want to do with your new buddy</p>
-    <p>Lisbon's premium service for <em>peer-to-peer dog sharing</em></p>
+    <div>
+      <!-- add the search bar -->
+
+      <!-- add the primary Search button -->
+      <a href="#" class="btn btn-primary">Find a Doggo!</a>
+    </div>
+
   </div>
-</div>
-
-<div>
-<!-- add the search bar -->
-  <simple_form_for>
-  </simple_form_for>
-
-<!-- add the primary Search button -->
-  <a href="#" class="btn btn-primary">Find a Doggo!</a>
-</div>
 
 
-<div>
-<!-- add the cards x 3 across the middle bottom -->
+  <!-- add the cards x 3 across the middle bottom -->
 
-</div>
+  <div class="container">
+    <div class="d-flex row">
+      <div class="col-4">
+        <div class="card">
+          <img src="/assets/doggo_card1.jpg" alt="Doggo Card">
+          <p>This dog is great for this activity!</p>
+          <h3>Name</h3>
+          <p>Breed</p>
+        </div>
+        <div class="card">
+          <img src="/assets/doggo_card1.jpg" alt="Doggo Card">
+          <p>This dog is great for this activity!</p>
+          <h3>Name</h3>
+          <p>Breed</p>
+        </div>
+        <div class="card">
+          <img src="/assets/doggo_card1.jpg" alt="Doggo Card">
+          <p>This dog is great for this activity!</p>
+          <h3>Name</h3>
+          <p>Breed</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
-<!-- footer across the bottom -->
-<div class="footer">
-  <ul class="social-links">
-    <li>
-      <a href="" target="_blank" class="social-icon">
-      <i class="fa-brands fa-twitter-square"></i>
-      </a>
-    </li>
-    <li>
-      <a href="" target="_blank" class="social-icon">
-      <i class="fa-brands fa-facebook-f"></i>
-      </a>
-    </li>
-    <li>
-       <a href="" target="_blank" class="social-icon">
-       <i class="fa-brands fa-instagram"></i>
-       </a>
-    </li>
-  </ul>
+  <!-- footer across the bottom -->
+  <div class="footer">
+    <ul class="social-links" style="list-style: none">
+      <li>
+        <a href="" target="_blank" class="social-icon">
+        <i class="fab fa-twitter-square"></i>
+        </a>
+      </li>
+      <li>
+        <a href="" target="_blank" class="social-icon">
+        <i class="fab fa-facebook-f"></i>
+        </a>
+      </li>
+      <li>
+        <a href="" target="_blank" class="social-icon">
+        <i class="fab fa-instagram"></i>
+        </a>
+      </li>
+    </ul>
 
-  <ul class = "company-details">
-    <li><a href="">Team</a></li>
-    <li><a href="">About Us</a></li>
-    <li><a href="">Privacy</a></li>
-    <li><a href="">Legal</a></li>
-  </ul>
-</div>
+    <ul class = "company-details">
+      <li><a href="">Team</a></li>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Legal</a></li>
+    </ul>
+  </div>
 
 </body>
 </html>
