--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :description %>>
   <%= f.input :activity %>
   <%= f.input :breed %>
+  <%= f.input :size %>
   <%= f.input :activity %>
   <%= f.input :age %>
   <%= f.button :submit %>
