--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -3,10 +3,10 @@
 
 <%= simple_form_for @dog do |f| %>
   <%= f.input :name %>
-  <%= f.input :description %>>
+  <%= f.input :description %>
   <%= f.input :activity %>
   <%= f.input :breed %>
-  <%= f.input :activity %>
   <%= f.input :age %>
+   <%= f.input :size %>
   <%= f.button :submit %>
 <% end %>
