--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,13 +7,13 @@
 </head>
 <body>
   <!-- add the navbar across the top -->
-  <div class="navbar">
+  <%# <div class="navbar">
     <div class="container">
       <img src="/assets/rufus_logo.png" alt="Rufus logo" width="150px">
       <a href="#" class="btn btn-primary">Sign Up</a>
       <a href="#" class="btn btn-primary">Login</a>
     </div>
-  </div>
+  </div> %>
 
   <!-- banner with descriptive text, photo, search form inputs and button -->
   <div class="banner" style="background-image: url(assets/doggo_banner3.jpg);">
