--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,23 +1,32 @@
+<p id="notice"><%= notice %></p>
 <h1>Dogs#index</h1>
 <p>Find me in app/views/dogs/index.html.erb</p>
 
-<h3> This are the buddies you could rent</h3>
+
+
+<h1>Doggos!</h1>
+<h3> These are the buddies you could rent</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Breed</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
   <tbody>
     <% @dogs.each do |dog| %>
-      <td>
+      <tr>
         <td><%= dog.name %></td>
         <td><%= dog.breed %></td>
-        <%# <td><%= link_to 'Show', restaurant</td> %>
-          <%# <% if policy(restaurant).update? %>
-            <%# <%= link_to 'Edit', edit_restaurant_path(restaurant) %>
-          <%# <% end %>
-        <%# </td> %>
-        <%# <td> %>
-          <%# <% if policy(restaurant).destroy? %>
-            <%# <%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %>
-          <%# <% end %>
-        <%# </td> %>
-      <%# </tr> %>
+        <td><%= link_to 'Show', dog_path(dog) %> </td>
+        <td><%= link_to 'Edit', edit_dog_path(dog) %> </td>
+        <td><%= link_to 'Destroy', dog, method: :delete, data: { confirm: 'Are you sure?' } %> </td>
+      </tr>
     <% end %>
   </tbody>
+</table>
+
+<%= link_to 'Add your doggo to our network!', new_dog_path, class: "btn btn-secondary" %>
