--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,1 +1,9 @@
-<%= render 'form', booking: @booking, dog: @dog %>
+<%= simple_form_for [@dog, @booking] do |f| %>
+
+  <%= f.input :start_date, label: "Start Date", as: :date, required: false%>
+  <%= f.input :end_date, label: "End Date", as: :date, required: false%>
+  <%= f.submit "Book!", class: "btn btn-primary" %>
+
+  <%= link_to 'Show', @dog %> |
+  <%= link_to 'Back', dogs_path %>
+<% end %>
