--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for [dog, booking] do |f| %>
 
-  <%= f.input :start_date, label: "Start Date", as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.input :end_date, label: "End Date", as: :string, required: false, input_html: {class: "datepicker"} %>
+  <%= f.input :start_date, label: "Start Date", as: :date, required: false%>
+  <%= f.input :end_date, label: "End Date", as: :date, required: false%>
   <%= f.submit "Book!", class: "btn btn-primary" %>
 
   <%= link_to 'Show', dog %> |
