--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -12,6 +12,7 @@
     <tr>
       <th>Name</th>
       <th>Breed</th>
+      <th>Owner</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,6 +22,7 @@
       <tr>
         <td><%= dog.name %></td>
         <td><%= dog.breed %></td>
+        <td><%= dog.user.email %></td>
         <td><%= link_to 'Show', dog_path(dog) %> </td>
         <td><%= link_to 'Edit', edit_dog_path(dog) %> </td>
         <td><%= link_to 'Destroy', dog, method: :delete, data: { confirm: 'Are you sure?' } %> </td>
