--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,15 +1,4 @@
 <h1>Dogs#new</h1>
 <p>Find me in app/views/dogs/new.html.erb</p>
 
-<%= simple_form_for @dog do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :activity %>
-  <%= f.input :breed %>
-  <%= f.input :age %>
-  <%= f.input :size, collection: ["Small", "Medium", "Large"] %>
-  <%= f.button :submit %>
-<% end %>
-
-
-<!-- dropdown on the age (prevent negative)>
+<%= render 'form', dog: @dog %>
