added link from Dogs show view to book

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -27,5 +27,6 @@
   <%= @dog.user.email %>
 </p>
 
+<%= link_to 'Book', ngit ew_dog_booking_path(@dog) %>
 <%= link_to 'Edit', edit_dog_path(@dog) %> |
 <%= link_to 'Back to Doggos', dogs_path %>
