--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -40,3 +40,8 @@
 </table>
 
 <%= link_to 'Add your doggo to our network!', new_dog_path, class: "btn btn-secondary" %>
+
+<div style="width: 100%; height: 600px;"
+  data-controller="mapbox"
+  data-mapbox-markers-value="<%= @markers.to_json %>"
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
