booking controller fixed

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -4,6 +4,6 @@
   <%= f.input :end_date, label: "End Date", as: :date, required: false%>
   <%= f.submit "Book!", class: "btn btn-primary" %>
 
-  <%= link_to 'Show', dog %> |
+  <%= link_to 'Show', dog %>
   <%= link_to 'Back', dogs_path %>
 <% end %>
