--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,1 +1,19 @@
-<h1>booking info</h1>
+<h1>Bookings#show</h1>
+
+<p>
+  <strong>Booking Date</strong>
+  <%= "#{@booking.start_date} - #{@booking.end_date}" %>
+</p>
+
+<p>
+<!-- do we want to put a hyperlink here to go back to the dog show page? -->
+  <strong>Dog Booked:</strong>
+  <%= @booking.dog.name %>
+</p>
+
+<% if policy(@booking).destroy? %>
+  <%= link_to 'Cancel this booking', booking_path(@booking), method: :delete, data: { confirm: 'Are you sure you want to cancel your fun date with doggo?' } %>
+<% end %>
+
+<%= link_to 'Back to Doggos', dogs_path %>
+<%#= link_to 'Back to Your New Doggo Friend', dog_path(dog) %>
