--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -1,8 +1,6 @@
 <h1>Dogs#edit</h1>
 <p>Find me in app/views/dogs/edit.html.erb</p>
 
-<h1> Editing Restaurant</h1>
+<h1> Editing Dog</h1>
 
 <%= render 'form', dog: @dog %>
-<%= link_to 'Show', @dog %> |
-<%= link_to 'Back', dog_path %>
