started the card for the dogs

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -23,6 +23,11 @@
 </p>
 
 <p>
+  <strong>Activity:</strong>
+  <%= @dog.description %>
+</p>
+
+<p>
   <strong> Owner:</strong>
   <%= @dog.user.email %>
 </p>
