--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,84 +1,21 @@
-<h1>Dogs#show</h1>
-<p>Find me in app/views/dogs/show.html.erb</p>
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @dog.name %>
-</p>
-
-<p>
-  <strong>Size:</strong>
-  <%= @dog.size %>
-</p>
-
-<p>
-  <strong>Breed:</strong>
-  <%= @dog.breed %>
-</p>
-
-<p>
-  <strong>Activity:</strong>
-  <%= @dog.activity %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @dog.description %>
-</p>
-
-<p>
-  <strong>Address:</strong>
-  <%= @dog.address %>
-</p>
-
-<p>
-  <strong> Owner:</strong>
-  <%= @dog.user.email %>
-</p>
-
-<p>
-
-  <strong> Bookings:</strong>
-</p>
-
-<table>
-  <thead>
-    <tr>
-      <th>Dog Renter</th>
-      <th>Booking Start</th>
-      <th>Booking End</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @dog.bookings.each do |booking| %>
-      <tr>
-        <td><%= booking.user.email %></td>
-        <td><%= booking.start_date %></td>
-        <td><%= booking.end_date %></td>
-        <td><%= link_to 'Show', user_booking_path(current_user, booking) %> </td>
-        <td>
-          <% if policy(booking).destroy? %>
-            <%= link_to 'Cancel this booking', booking_path(booking), method: :delete, data: { confirm: 'Are you sure you want to cancel your fun date with doggo?' } %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class="card-dog d-flex justify-content-center">
+  <img src="/assets/doggo_card1.jpg" alt="Doggo Card">
+  <div class="card-product-infos" >
+    <h2><%= @dog.name %></h2>
+    <p><strong>Age: </strong><%= @dog.age %> </p>
+    <p><strong>Size: </strong><%= @dog.size %> </p>
+    <p><strong>Breed: </strong><%= @dog.breed %> </p>
+    <p><strong>Activity: </strong><%= @dog.activity %> </p>
+    <p><strong>Description: </strong><%= @dog.description %> </p>
+    <p><strong>Owner: </strong><%= @dog.user.email %> </p>
+  </div>
+</div>
 
 <% if user_signed_in? %>
-  <%= link_to 'Book this Doggo', new_dog_booking_path(@dog) %>
+  <%= link_to 'Book this Doggo', new_dog_booking_path(@dog), class: "btn btn-primary" %>
+  <%= link_to 'Edit your Doggo', edit_dog_path(@dog), class: "btn btn-ghost" %>
 <% end %>
-
-<%= link_to 'Edit your Doggo', edit_dog_path(@dog) %>
-
-
-
-<%= link_to 'Book', new_dog_booking_path(@dog) %>
-<%= link_to 'Edit', edit_dog_path(@dog) %> |
-
-<%= link_to 'Back to Doggos', dogs_path %>
+<%= link_to 'Back to Doggos', dogs_path, class: "btn btn-gradient" %>
