rails helper image_tag

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
 
   <!-- banner with descriptive text, photo, search form inputs and button -->
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(assets/doggo_banner3.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(<%= image_path "doggo_banner3.jpg" %>);">
   <div class="container">
     <div class="container-info text-center pt-10">
       <h1>Rent Rufus</h1>
