--- a/app/views/shared/_dog_card.html.erb
+++ b/app/views/shared/_dog_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card-dog d-flex">
-  <img src="/assets/doggo_card1.jpg" alt="Doggo Card">
+  <%= image_tag "doggo_card1.jpg" %>
   <div class="card-product-infos">
     <h2><%= dog.name %></h2>
     <p><strong>Age: </strong><%= dog.age %> </p>
