--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="card-dog d-flex justify-content-center">
-  <img src="/assets/doggo_card1.jpg" alt="Doggo Card">
+  <%= image_tag "doggo_card1.jpg" %>
   <div class="card-product-infos" >
     <h2><%= @dog.name %></h2>
     <p><strong>Age: </strong><%= @dog.age %> </p>
