--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,17 +8,17 @@
 body {
 
    h1 {
-    color: red;
+    // color: red;
     font-size: 48px;
    }
 
    h3 {
-    color: red;
+    // color: red;
     font-size: 32px;
    }
 
    p {
-    color: red;
+    // color: red;
     font-size: 20px;
    }
 
