--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -3,29 +3,19 @@
 
 <%= link_to 'Add your Dog to our community!', new_dog_path, class: "btn btn-secondary" %>
 
-<div class = "container">
+<div class = "container-fluid">
   <div class = "row">
-    <div class = "col-8">
+    <div class = "col-6">
       <div class="row">
         <% @dogs.each do |dog| %>
           <div class="col-6">
             <%= render 'shared/dog_card', dog: dog %>
-            <td><%= link_to 'Show', dog_path(dog) %> </td>
-              <td>
-                <% if policy(dog).update? %>
-                <%= link_to 'Edit', edit_dog_path(dog) %>
-                <% end %>
-              </td>
-            <td>
-              <% if policy(dog).destroy? %>
-                <%= link_to 'Destroy', dog, method: :delete, data: { confirm: 'Do you really want to give your dog to the Chinese for lunch?' } %>
-              <% end %>
-            </td>
+            
           </div>
         <% end %>
       </div>
     </div>
-    <div class = "col-4">
+    <div class = "col-6">
       <div id="map" style="width: 100%; height: 800px;"
         data-controller="mapbox"
         data-mapbox-markers-value="<%= @markers.to_json %>"
