--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,17 +1,8 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="card-dog d-flex justify-content-center">
-  <%= image_tag "doggo_card1.jpg" %>
-  <div class="card-product-infos" >
-    <h2><%= @dog.name %></h2>
-    <p><strong>Age: </strong><%= @dog.age %> </p>
-    <p><strong>Size: </strong><%= @dog.size %> </p>
-    <p><strong>Breed: </strong><%= @dog.breed %> </p>
-    <p><strong>Activity: </strong><%= @dog.activity %> </p>
-    <p><strong>Description: </strong><%= @dog.description %> </p>
-    <p><strong>Owner: </strong><%= @dog.user.email %> </p>
-  </div>
+<div class="col-6">
+  <%= render 'shared/dog_card', dog: @dog %>
 </div>
 
 <% if user_signed_in? %>
