landing page updated

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,9 +1,9 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="card-dog d-flex justify-content-center">
+<div class="card-show justify-content-center">
   <img src="/assets/doggo_card1.jpg" alt="Doggo Card">
-  <div class="card-product-infos" >
+  <div class="show-dog" >
     <h2><%= @dog.name %></h2>
     <p><strong>Age: </strong><%= @dog.age %> </p>
     <p><strong>Size: </strong><%= @dog.size %> </p>
