home page button fix + index page navbar button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,9 @@
         <div class="container-info text-center mt-5">
           <h3>Choose <strong>when</strong> and <strong>what</strong> you want to do with your new buddy</p>
           <p>Lisbon's premium service for <em>peer-to-peer dog sharing</em></p>
-          <h1><%= link_to "Find a Dog", dogs_path, class:"btn btn-secondary" %></h1>
+          <h1><%= link_to "Meet our Community of Doggos", dogs_path, class:"btn btn-secondary" %></h1>
+          <p>OR</p>
+          <h1><%= link_to 'Add your Dog to our Community!', new_dog_path, class: "btn btn-secondary" %></h1>
         </div>
       </div>
     </div>
@@ -52,7 +54,6 @@
       <%end%>
   </div>
 </div>
-
 
 
   <div class="footer">
