--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,7 +1,11 @@
-<h1 class="text-center">Dogs available for your love</h1>
-<h3 class="text-center"> These are the dogs you could spend time with</h3>
+</div>
+  <h1 class="text-center">Dogs available for your love</h1>
+  <h3 class="text-center"> These are the dogs you could spend time with</h3>
+<div>
 
-<%= link_to 'Add your Dog to our community!', new_dog_path, class: "btn btn-secondary" %>
+<div>
+the search bar
+</div>
 
 <div class = "container-fluid">
   <div class = "row">
@@ -10,7 +14,6 @@
         <% @dogs.each do |dog| %>
           <div class="col-6">
             <%= render 'shared/dog_card', dog: dog %>
-            
           </div>
         <% end %>
       </div>
