--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,10 +11,10 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    #75c9b7;
 $success:    $green;
-$info:       $yellow;
-$danger:     $red;
+$info:       #ffe26a;
+$danger:     #F6A1A6;
 $warning:    $orange;
 $secondary:   #16123f;
 
