--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Rent Rufus </title>
+  <title>Rent Rufus | Never be alone again </title>
+  <!-- Google result description-->
+  <meta name="description" content="Adopt man's best friend for a few hours and go on a hike, to the park or cuddle on the couch!">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- add the navbar across the top -->
@@ -31,9 +36,9 @@
 
     <div class="row">
       <div class="col-4 offset-8">
-        <div class="container-info text-center mt-5">
+        <div class="container-info text-center mt-7">
           <h3>Choose <strong>when</strong> and <strong>what</strong> you want to do with your new buddy</p>
-          <p>Lisbon's premium service for <em>peer-to-peer dog sharing</em></p>
+          <p>Lisbon's premium service for peer-to-peer dog sharing</p>
           <h1><%= link_to "Meet our Community of Doggos", dogs_path, class:"btn btn-secondary" %></h1>
           <p>OR</p>
           <h1><%= link_to 'Add your Dog to our Community!', new_dog_path, class: "btn btn-secondary" %></h1>
