search bar functionality complete

--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -1,15 +1,15 @@
+<div class="container form-control">
 
-<%= simple_form_for @dog do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :activity %>
-  <%= f.input :breed %>
-  <%= f.input :address, input_html: { data: { geocoder_target: "address" }, class: "d-none" },
-              wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
-  <%= f.input :age %>
-  <%= f.input :size, collection: ["Small", "Medium", "Large"] %>
-  <%= f.input :photo, as: :file %>
-  <%= f.button :submit, class: "btn btn-primary" %>
-<% end %>
-
-<!-- dropdown on the age (prevent negative)>
+  <%= simple_form_for @dog do |f| %>
+    <%= f.input :name %>
+    <%= f.input :description %>
+    <%= f.input :activity, collection: Dog::ACTIVITY %>
+    <%= f.input :breed, collection: Dog::BREED %>
+    <%= f.input :address, input_html: { data: { geocoder_target: "address" }, class: "d-none" },
+                wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
+    <%= f.input :age %>
+    <%= f.input :size, collection: Dog::SIZE %>
+    <%= f.input :photo, as: :file %>
+    <%= f.button :submit, class: "btn btn-primary" %>
+  <% end %>
+</div>
