--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,9 +1,12 @@
-<%= simple_form_for [dog, booking] do |f| %>
 
-  <%= f.input :start_date, label: "Start Date", as: :date, required: false%>
-  <%= f.input :end_date, label: "End Date", as: :date, required: false%>
-  <%= f.submit "Book!", class: "btn btn-primary" %>
 
-  <%= link_to 'Show', dog %>
-  <%= link_to 'Back', dogs_path %>
-<% end %>
+
+<div class="form-control">
+  <%= simple_form_for [dog, booking] do |f| %>
+    <%= f.input :start_date, label: "Start Date", as: :date, required: false%>
+    <%= f.input :end_date, label: "End Date", as: :date, required: false%>
+    <%= f.submit "Book!", class: "btn btn-primary" %>
+    <%= link_to 'Show', dog %>
+    <%= link_to 'Back', dogs_path %>
+  <% end %>
+</div>
