--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -3,7 +3,7 @@
   <h3 class="text-center"> These are the dogs you could spend time with</h3>
 </div>
 
-<div class="container">
+<div class="container mb-3">
   <%= form_tag dogs_path, method: :get do %>
     <div class="row">
       <div class="col">
