--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,4 +1,3 @@
-<h1>Dogs#new</h1>
-<p>Find me in app/views/dogs/new.html.erb</p>
+<h1 style="text-align: center;">Add your Dog!</h1>
 
 <%= render 'form', dog: @dog %>
