--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -42,6 +42,10 @@
           </div>
         <% end %>
       </div>
+
+      <div style="text-align: center;" class="this-is-the-pagination text-align: center;">
+        <%= paginate @dogs %>
+      </div>
     </div>
     <div class = "col-6">
       <div id="map" style="width: 100%; height: 800px;"
