show of booking and dog perfected

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -71,4 +71,5 @@ body {
   background-size: cover;
   background-position: center;
   height: 600px;
+  background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0)),url(asset-path("dog_yellow.jpg"));
 }
