--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -6,7 +6,6 @@
     <%= f.input :start_date, label: "Start Date", as: :date, required: false%>
     <%= f.input :end_date, label: "End Date", as: :date, required: false%>
     <%= f.submit "Book!", class: "btn btn-primary" %>
-    <%= link_to 'Show', dog %>
-    <%= link_to 'Back', dogs_path %>
+    <%= link_to 'Back', dogs_path, class: "btn btn-danger ms-1" %>
   <% end %>
 </div>
