--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,19 +1,31 @@
-<h1>Bookings#show</h1>
+<div class="container">
+  <h1 class="text-center">You just booked <%= @booking.dog.name  %></h1>
+</div>
 
-<p>
-  <strong>Booking Date</strong>
-  <%= "#{@booking.start_date} - #{@booking.end_date}" %>
-</p>
 
-<p>
-<!-- do we want to put a hyperlink here to go back to the dog show page? -->
-  <strong>Dog Booked:</strong>
-  <%= @booking.dog.name %>
-</p>
+<div class="container">
 
-<% if policy(@booking).destroy? %>
-  <%= link_to 'Cancel this booking', booking_path(@booking), method: :delete, data: { confirm: 'Are you sure you want to cancel your fun date with doggo?' } %>
-<% end %>
+  <div class="row ">
 
-<%= link_to 'Back to Doggos', dogs_path %>
+    <div class="card col-6 offset-3 text-center pt-2">
+      <p>
+        <strong>Booking Date</strong>
+        <%= "#{@booking.start_date} - #{@booking.end_date}" %>
+      </p>
+
+      <p>
+      <!-- do we want to put a hyperlink here to go back to the dog show page? -->
+        <strong>Have fun with</strong>
+        <%= @booking.dog.name %>
+      </p>
+      <div class="d-flex justify-content-center mb-3">
+        <% if policy(@booking).destroy? %>
+          <%= link_to 'Cancel this booking', booking_path(@booking), class: "btn btn-secondary ", method: :delete, data: { confirm: 'Are you sure you want to cancel your fun date with doggo?' } %>
+        <% end %>
+        <%= link_to 'Back to Doggos', dogs_path, class: "btn btn-danger ms-1" %>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%#= link_to 'Back to Your New Doggo Friend', dog_path(dog) %>
