--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,41 +1,44 @@
 
-<p id="notice"><%= notice %></p>
+
 
 <div class="container">
   <h1 class="text-center">Meet <%= @dog.name %></h1>
 </div>
 
 <div class="container">
-  <div class="col-3 offset-4">
-    <div class="row ">
+  <div class="row">
+    <div class="offset-3 col-6">
+
+      <div class="text-center">
         <% if @dog.photo.key.present? %>
           <%= cl_image_tag @dog.photo.key, height: 200, :radius=>10, class:"card-img-top" %>
+        <% else %>
+          <img height="200" width="" src="https://images.unsplash.com/photo-1536809188428-e8ecf663d0be?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070" alt="alternatetext">
         <% end %>
-    </div>
-  </div>
-</div>
-
-
-<div class="container">
-  <div class="card d-flex justify-content-center border border-secondary" style="width: 100%">
-    <div class="row">
-      <div class="show-dog" >
-        <h2><%= @dog.name %></h2>
-        <p><strong>Age: </strong><%= @dog.age %> </p>
-        <p><strong>Size: </strong><%= @dog.size %> </p>
-        <p><strong>Breed: </strong><%= @dog.breed %> </p>
-        <p><strong>Activity: </strong><%= @dog.activity %> </p>
-        <p><strong>Description: </strong><%= @dog.description %> </p>
-        <p><strong>Owner: </strong><%= @dog.user.email %> </p>
-        <p><strong>Address: </strong><%= @dog.address %> </p>
       </div>
 
-      <div>
-        <% if user_signed_in? %>
+      <div class="card d-flex justify-content-center border border-secondary mt-4 p-3" style="width: 100%">
+        <div class="show-dog" >
+          <h2><%= @dog.name %></h2>
+          <p><strong>Age: </strong><%= @dog.age %> </p>
+          <p><strong>Size: </strong><%= @dog.size %> </p>
+          <p><strong>Breed: </strong><%= @dog.breed %> </p>
+          <p><strong>Activity: </strong><%= @dog.activity %> </p>
+          <p><strong>Description: </strong><%= @dog.description %> </p>
+          <p><strong>Owner: </strong><%= @dog.user.email %> </p>
+          <p><strong>Address: </strong><%= @dog.address %> </p>
+        </div>
+
+        <div class="d-flex justify-content-center">
           <%= link_to 'Book this Doggo', new_dog_booking_path(@dog), class: "btn btn-primary" %>
-          <%= link_to 'Edit your Doggo', edit_dog_path(@dog), class: "btn btn-info" %>
-        <% end %>
-        <%= link_to 'Back to Doggos', dogs_path, class: "btn btn-danger" %>
+          <% if policy(@dog).update? %>
+              <%= link_to "Update", edit_dog_path(@dog), class: "btn btn-info ms-1" %>
+          <% end %>
+          <% if policy(@dog).destroy? %>
+              <td><%= link_to 'Delete', @dog, class: "btn btn-secondary ms-1", method: :delete, data: { confirm: 'Are you sure you want the Chinese to be fed more?' } %></td>
+          <% end %>
+          <%= link_to 'Back to Doggos', dogs_path, class: "btn btn-danger ms-1" %>
+        </div>
       </div>
     </div>
   </div>
