--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
   <!-- banner with descriptive text, photo, search form inputs and button -->
 
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0)),url(assets/dog_yellow.jpg);"
+<div class="banner">
   <div class="container">
     <div class="row">
       <div class="col-5">
