--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rent Rufus | Never be alone again </title>
   <!-- Google result description-->
-  <meta name="description" content="Adopt man's best friend for a few hours and go on a hike, to the park or cuddle on the couch!">
+  <meta data-controller="typed-js" name="description" content="Adopt man's best friend for a few hours and go on a hike, to the park or cuddle on the couch!">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
       <div class="col-5">
         <div class="container-info text-center mt-5">
           <h1>Rent Rufus</h1>
-          <h3>Adopt man's best friend...for a few hours!</h3>
+          <h3 data-controller="typed-js"></h3>
         </div>
       </div>
     </div>
