--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -43,7 +43,7 @@
         <% end %>
       </div>
 
-      <div style="text-align: center;"
+      <div style="text-align: center;">
         <%= paginate @dogs %>
       </div>
 
