--- a/app/views/shared/_dog_card.html.erb
+++ b/app/views/shared/_dog_card.html.erb
@@ -8,7 +8,7 @@
     <% end %>
     <div class="card-body">
       <h2 class="card-title"><%= dog.name %></h2>
-      <p style="font-size:20px;" class="card-text text-truncate "><%= dog.description %></p>
+      <p style="font-size:20px;" class="card-text text-truncate "><%= dog.breed %></p>
       <p style="font-size:20px;" class="card-text "><%= dog.activity %></p>
 
         <div>
